# aisearch

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  PRODUCT_STRUCTURE.md  README.md  RELEASE.md  SECURITY.md  ai_search_sales_strategy_prospects_2026.xls  compose-inference.yaml  compose-model-management.yaml  compose-triton.yaml  compose.yaml
components/common/: README.md  pyproject.toml
components/common/src/marqo_common/: __init__.py  model_registry.py  version.py
components/inference_orchestrator/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
components/inference_orchestrator/src/inference_orchestrator/: config.py  main.py  marqo_docs.py  on_start_script.py  version.py
components/inference_orchestrator/src/inference_orchestrator/api/: otel.py  telemetry.py
components/inference_orchestrator/src/inference_orchestrator/core/: enum.py  logging.py  settings.py
components/inference_orchestrator/src/inference_orchestrator/errors/: base_error.py  common_errors.py
components/inference_orchestrator/src/inference_orchestrator/schemas/: api.py  base_model.py  triton_channel_args.py
components/inference_orchestrator/src/inference_orchestrator/services/: errors.py
components/inference_orchestrator/src/inference_orchestrator/services/inference_cache/: caching_inference.py  marqo_inference_cache.py  marqo_lfu_cache.py  marqo_lru_cache.py  monitoring.py
components/inference_orchestrator/src/inference_orchestrator/services/media_download_and_preprocess/: image_download.py  media_download_and_preprocess.py  split_text.py
components/inference_orchestrator/tests/integration_tests/: test_case.py  test_main_api.py  test_on_start_script.py
components/inference_orchestrator/tests/unit_tests/: test_main_api.py  test_marqo_docs.py  test_on_start_script.py  test_version.py
components/inference_orchestrator/tests/unit_tests/core/: test_settings.py
components/marqo/: Dockerfile  pyproject.toml  run_marqo.sh
components/marqo/scripts/: shutdown.sh
components/marqo/scripts/vespa_local/: README.md  vespa_local.py
components/marqo/src/marqo/: README.md  base_model.py  config.py  logging.py  marqo_docs.py  otel.py
components/marqo/src/marqo/api/: configs.py
components/marqo/src/marqo/core/: constants.py  exceptions.py
components/marqo/src/marqo/settings/: settings.py
components/marqo/src/marqo/tensor_search/: api.py  constants.py  delete_docs.py  enums.py  index_meta_cache.py  on_start_script.py  telemetry.py  tensor_search.py  utils.py  validation.py
components/marqo/src/marqo/vespa/: vespa_client.py
components/marqo/tests/api_tests/v1/: docker-compose.yml  pyproject.toml
components/marqo/tests/compatibility_tests/: compatibility_test_runner.py  conftest.py  docker_manager.py  readme.md  requirements.txt  test_vector_normalisation.py
components/marqo/tests/compatibility_tests/add_or_replace_documents/: test_add_documents_multimodal.py  test_add_documents_with_custom_vector.py  test_document_api.py
components/marqo/tests/compatibility_tests/base_test_case/: base_compatibility_test.py  marqo_test.py
components/marqo/tests/compatibility_tests/compatibility_test_logger/: __init__.py
components/marqo/tests/compatibility_tests/embed/: test_embed.py
components/marqo/tests/compatibility_tests/recommend/: test_recommend.py
components/marqo/tests/compatibility_tests/search/: test_search.py  test_search_with_custom_score_rerankers.py  test_search_with_global_score_modifiers.py  test_search_with_score_modifiers.py
components/marqo/tests/compatibility_tests/update_documents/: test_update_documents.py  test_update_documents_unstructured.py
components/marqo/tests/integ_tests/: conftest.py  marqo_test.py
components/marqo/tests/integ_tests/tensor_search/: test_add_documents_use_existing_tensors.py  test_api.py  test_api_exception_handler.py  test_api_query_logging_integration.py  test_api_utils.py  test_api_validation.py  test_boost_field_scores.py  test_custom_api_route.py  test_delete_index.py  test_get_indexes.py  test_image_preprocessing.py  test_index_meta_cache.py  test_infer_modality.py  test_lexical_search.py  test_multimodal_tensor_combination.py  test_on_start_script.py  test_openapi.py  test_pagination.py  test_prefix.py  test_score_modifiers_search.py  test_searchable_attributes.py  test_utils.py  test_validation.py  test_weakand_and_second_phase_lexical_modifiers.py
components/marqo/tests/integ_tests/utils/: transition.py
components/marqo/tests/integ_tests/vespa/: test_update_documents_batch.py  test_vespa_client.py
components/marqo/tests/unit_tests/: marqo_test.py
components/marqo/tests/unit_tests/marqo/: test_base_model.py  test_logging.py  test_otel.py  test_settings.py  test_version.py
components/marqo/tests/unit_tests/vespa/: test_vespa_client.py
components/marqo/vespa/: pom.xml
components/model_management/: CLAUDE.md  Dockerfile  pyproject.toml
components/model_management/src/model_management/: __init__.py  config.py  main.py  on_start.py
components/model_management/src/model_management/api/: exception_handlers.py  lifespan.py  request_id.py  v1_routes.py
components/model_management/src/model_management/contracts/: problem.py
components/model_management/src/model_management/core/: enum.py  logging.py  settings.py
components/model_management/src/model_management/errors/: base.py  http_errors.py
components/model_management/src/model_management/schemas/: api_models.py  app_models.py  triton_model_properties.py
components/model_management/src/model_management/services/: errors.py
components/model_management/tests/integration_tests/api/: test_exception_handlers.py  test_lifespan.py  test_request_id.py  test_v1_routes.py
components/model_management/tests/unit_tests/: test_config.py  test_version.py
components/model_management/tests/unit_tests/api/: test_exception_handlers.py  test_lifespan.py
components/model_management/tests/unit_tests/core/: test_logging.py  test_settings.py
components/model_management/tests/unit_tests/schemas/: test_api_models.py  test_triton_model_properties.py
(+618 files in other folders)
