[project]
name = "v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0",
    "flake8>=7.3.0",
    "numpy>=2.0.2",
    "pillow>=12.1.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.3",
    "notebook>=7.4.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "v1", "tests"]

[dependency-groups]
dev = [
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]
